objects/Form_Builder__TItan_Sign_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Form_Builder__By_Email__c</fullName>
        <label>By Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Comment__c</fullName>
        <label>Comment</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Company_Signature__c</fullName>
        <label>Company Signature</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Document_Link__c</fullName>
        <label>Document Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Event__c</fullName>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Viewed</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Disclaimer Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Builder__MetaData__c</fullName>
        <label>MetaData</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Personal_Signature__c</fullName>
        <label>Personal Signature</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Step_Number__c</fullName>
        <label>Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Builder__TItan_Document__c</fullName>
        <label>TItan Document</label>
        <referenceTo>Form_Builder__Titan_Sign_Document__c</referenceTo>
        <relationshipLabel>TItan Sign Trackings</relationshipLabel>
        <relationshipName>TItan_Sign_Trackings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Titan_Signature_ID__c</fullName>
        <label>Titan Signature ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Using_IP_Address__c</fullName>
        <label>Using IP Address</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <label>TItan Sign Tracking</label>
    <nameField>
        <displayFormat>TST-{000000}</displayFormat>
        <label>TST#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TItan Sign Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>